# m.ax

./: .gitignore  .gitmodules  README.md  app.py  app_server.py  brief.md  data_collect.py  server.py
.claude/: settings.json
common/: comm_server.py  model_server.py  ros_utils.py  utils.py  vla_server.py
common/utils/: lerobot_utils.py  ros_utils.py  ui_utils.py  utils.py
config/: data_collect_config.yaml  proj_gt_kitting.yaml  proj_gt_kitting_config.yaml  server_config.yaml  ui_config.yaml
docker/: Dockerfile.jetpack  Dockerfile.x86  build_docker.sh  container.sh  docker-compose.yml
pages/: collection.py  inference.py  monitor.py
ros2/install/: local_setup.sh  setup.sh
ros2/install/max_bringup/share/max_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/log/: latest_build
ros2/src/: README.md
ros2/src/max_bringup/: package.xml  setup.cfg  setup.py
ros2/src/max_bringup/config/: domain_config.yaml
ros2/src/max_bringup/launch/: bringup.launch.py  camera.launch.py  domain_bridge.launch.py
ros2/src/max_interfaces/: CMakeLists.txt  package.xml
ros2/src/max_interfaces/action/: LoadPolicy.action  RunInference.action
ros2/src/max_interfaces/msg/: InferenceStatus.msg  RobotStatesPackage.msg
ros2/src/max_interfaces/srv/: LoadPolicy.srv  MoveToPose.srv
ros2/src/max_server/: package.xml  setup.cfg  setup.py
ros2/src/max_server/config/: gt_kitting.yaml  kitting_config.yaml
ros2/src/max_server/launch/: max_server.launch.py
ros2/src/max_server/max_server/: max_server.py  max_server_node.py
ros2/src/max_server/max_server/communication/: communicator.py
ros2/src/max_server/max_server/data_processing/: data_converter.py
ros2/src/max_server/max_server/inference/: inference_manager.py
ros2/src/max_server/max_server/task_manager/: task_manager.py  test.py
ros2/src/max_server/max_server/task_planner/: task_planner.py
ros2/src/max_server/max_server/utils/: config_loader.py
ros2/src/max_web/: README.md  index.html  package-lock.json  package.json  vite.config.js
ros2/src/max_web/backend/lerobot_editor/: server.py
ros2/src/max_web/src/: App.jsx
ros2/src/max_web/src/components/: CameraView.jsx  InferenceControl.jsx  InferenceStatus.jsx  PolicyLoader.jsx  PosePanel.jsx  RobotStatesPanel.jsx
ros2/src/max_web/src/hooks/: useRosActionClient.js  useRosConnection.js  useRosServiceCaller.js  (+1 more)
scripts/: ckpt_download.py  ckpt_upload.py  data_collect.py  data_conversion.py  data_download.py  data_edit_image_rotate.py  data_edit_prompt.py  data_fix_stats.py  data_merge.py  data_simplify_tasks.py  data_split.sh  data_upload.py  fr3.urdf  recover_dataset.py  train.sh  train_multi_gpu_a6000.sh  upload_dataset.py
(+17 files in other folders)
