<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>max_server</name>
  <version>0.0.0</version>
  <description>Core ROS 2 nodes for the m.ax server (inference, communication, task).</description>
  <maintainer email="moonjongsul@gmail.com">keti10829</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>max_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
